<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources>
    <string name="app_name">Music</string>

    <!-- Toast messages -->
    <string name="app_permissions_toast">Permissions not granted by the user.</string>

    <!-- Request status error types -->
    <string name="request_status_error_type_unknown">Unknown</string>
    <string name="request_status_error_type_not_found">Not found</string>
    <string name="request_status_error_type_io">I/O error</string>
    <string name="request_status_error_type_authentication_required">Authentication required</string>
    <string name="request_status_error_type_invalid_credentials">Invalid credentials</string>

    <!-- Main fragment sections -->
    <string name="main_fragment_section_activity">Activity</string>
    <string name="main_fragment_section_search">Search</string>
    <string name="main_fragment_section_library">Library</string>

    <!-- Library fragment menus -->
    <string name="library_fragment_menu_albums">Albums</string>
    <string name="library_fragment_menu_artists">Artists</string>
    <string name="library_fragment_menu_genres">Genres</string>
    <string name="library_fragment_menu_playlists">Playlists</string>

    <!-- Playlists fragment -->
    <string name="create_playlist">Create new playlist</string>
    <string name="no_playlists_comma">No playlists,</string>
    <string name="create_playlist_suggestion">Create a new one?</string>
    <string name="create_playlist_confirm">Create</string>

    <!-- No elements -->
    <string name="no_albums">No albums</string>
    <string name="no_artists">No artists</string>
    <string name="no_genres">No genres</string>
    <string name="no_playlists">No playlists</string>
    <string name="no_audios">No audios</string>
    <string name="no_results">No results</string>

    <!-- Genres -->
    <string name="genre_unknown">Unknown</string>

    <!-- Tracks information -->
    <plurals name="tracks_count">
        <item quantity="one">%d track</item>
        <item quantity="other">%d tracks</item>
    </plurals>
    <plurals name="tracks_duration">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="tracks_info">%1$s, %2$s</string>

    <!-- Artist fragment -->
    <string name="artist_albums_header">Albums</string>
    <string name="artist_appears_in_album_header">Appears in album</string>
    <string name="artist_appears_in_playlist_header">Appears in playlist</string>

    <!-- Audio info bottom sheet dialog fragment -->
    <string name="audio_play_next">Play next</string>
    <string name="audio_add_to_queue">Add to queue</string>
    <string name="audio_remove_from_playlist">Remove from playlist</string>
    <string name="audio_add_or_remove_from_playlists">Add or remove from playlists</string>
    <string name="open_album">Open album</string>
    <string name="open_artist">Open artist</string>

    <!-- Playlist fragment -->
    <string name="playlist_tracks_info">%1$d tracks, %2$d minutes</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="rename_playlist_positive">Rename</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_playlist_message">Are you sure you want to delete this playlist?</string>
    <string name="delete_playlist_positive">Delete</string>

    <!-- Now playing fragment -->
    <string name="playback_speed_format">%1$s×</string>

    <!-- Now playing stats dialog fragment -->
    <string name="audio_source">Source</string>
    <string name="audio_transcoding">Transcoding</string>
    <string name="audio_output">Output</string>
    <string name="audio_output_not_available_in_current_configuration">Output information are not available in current configuration</string>
    <string name="audio_file_type">File type</string>
    <string name="audio_file_type_unknown">Unknown</string>
    <string name="audio_sample_rate">Sample rate</string>
    <string name="audio_sample_rate_format">%1$s kHz</string>
    <string name="audio_sample_rate_unknown">Unknown</string>
    <string name="audio_channel_count">Channel count</string>
    <string name="audio_channel_count_unknown">Unknown</string>
    <string name="audio_encoding">Encoding</string>
    <string name="audio_encoding_unknown">Unknown</string>
    <string name="audio_float_mode_enabled">PCM float mode enabled</string>
    <string name="audio_float_mode_enabled_unknown">Unknown</string>
    <string name="audio_float_mode_enabled_true">True</string>
    <string name="audio_float_mode_enabled_false">False</string>
    <string name="audio_output_mode">Output mode</string>
    <string name="audio_output_mode_unknown">Unknown</string>
    <string name="audio_output_mode_pcm">PCM</string>
    <string name="audio_output_mode_offload">Offload</string>
    <string name="audio_output_mode_passthrough">Passthrough</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="audio_bitrate_unknown">Unknown</string>
    <string name="audio_bitrate_format">%1$s kbps</string>

    <!-- Provider types -->
    <string name="provider_type_local">Local</string>
    <string name="provider_type_subsonic" translatable="false">Subsonic / OpenSubsonic</string>

    <!-- Provider arguments -->
    <string name="provider_argument_server">Server</string>
    <string name="provider_argument_username">Username</string>
    <string name="provider_argument_password">Password</string>
    <string name="provider_argument_use_legacy_authentication">Use legacy authentication</string>

    <!-- Provider arguments validation errors -->
    <string name="provider_argument_validation_error_required">A value is required</string>
    <string name="provider_argument_validation_error_malformed_http_uri">Must be a valid HTTP or HTTPS URL (e.g. https://google.com)</string>

    <!-- Provider selector dialog fragment -->
    <string name="providers">Providers</string>
    <string name="add_provider_action">Add</string>

    <!-- Manage provider fragment -->
    <string name="add_provider">Add provider</string>
    <string name="manage_provider">Manage provider</string>
    <string name="save_provider_action">Save</string>
    <string name="delete_provider_action">Delete</string>
    <string name="delete_provider_confirmation">Are you sure you want to delete this provider?</string>
    <string name="provider_name">Name</string>
    <string name="provider_name_error">Enter a name</string>
    <string name="provider_type">Provider type</string>
    <string name="provider_type_error">Select a provider type</string>
    <string name="argument_validation_error_title">Error</string>
    <string name="argument_validation_error_message">Error while parsing the following arguments:\n%1$s</string>
    <string name="argument_validation_error_item">%1$s: %2$s</string>

    <!-- Now playing widget -->
    <string name="now_playing_widget_description">Now playing</string>
    <string name="now_playing_widget_dummy_title">Title</string>
    <string name="now_playing_widget_dummy_artist">Artist</string>
    <string name="now_playing_widget_dummy_album">Album</string>
</resources>
