<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurfaceContainer"
        android:paddingVertical="8dp"
        android:orientation="vertical">

        <org.lineageos.twelve.ui.views.ListItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_source"
            app:leadingIconImage="@drawable/ic_audio_file" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/sourceFileTypeListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_file_type"
            app:supportingText="@string/audio_file_type_unknown" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/sourceSampleRateListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_sample_rate"
            app:supportingText="@string/audio_sample_rate_unknown" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/sourceChannelCountListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_channel_count"
            app:supportingText="@string/audio_channel_count_unknown" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/sourceEncodingListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_encoding"
            app:supportingText="@string/audio_encoding_unknown" />

        <org.lineageos.twelve.ui.views.ListItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_transcoding"
            app:leadingIconImage="@drawable/ic_conversion_path" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/transcodingFloatModeEnabledListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_float_mode_enabled"
            app:supportingText="@string/audio_float_mode_enabled_unknown" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/transcodingEncodingListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_encoding"
            app:supportingText="@string/audio_encoding_unknown" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/transcodingOutputModeListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_output_mode"
            app:supportingText="@string/audio_output_mode_unknown" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/transcodingBitrateListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_bitrate"
            app:supportingText="@string/audio_bitrate_unknown" />

        <org.lineageos.twelve.ui.views.ListItem
            android:id="@+id/outputHeaderListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:headlineText="@string/audio_output"
            app:leadingIconImage="@drawable/ic_media_output" />

        <LinearLayout
            android:id="@+id/outputItemsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <org.lineageos.twelve.ui.views.ListItem
                android:id="@+id/outputSampleRateListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headlineText="@string/audio_sample_rate"
                app:supportingText="@string/audio_sample_rate_unknown" />

            <org.lineageos.twelve.ui.views.ListItem
                android:id="@+id/outputChannelCountListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headlineText="@string/audio_channel_count"
                app:supportingText="@string/audio_channel_count_unknown" />

            <org.lineageos.twelve.ui.views.ListItem
                android:id="@+id/outputEncodingListItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:headlineText="@string/audio_encoding"
                app:supportingText="@string/audio_encoding_unknown" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
