<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/albumTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurface" />

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <org.lineageos.twelve.ui.views.ListItem
        android:id="@+id/removeFromPlaylistListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:headlineText="@string/audio_remove_from_playlist"
        app:leadingIconImage="@drawable/ic_playlist_remove" />

    <org.lineageos.twelve.ui.views.ListItem
        android:id="@+id/addOrRemoveFromPlaylistsListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headlineText="@string/audio_add_or_remove_from_playlists"
        app:leadingIconImage="@drawable/ic_playlist_add" />

    <org.lineageos.twelve.ui.views.ListItem
        android:id="@+id/openAlbumListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headlineText="@string/open_album"
        app:leadingIconImage="@drawable/ic_album" />

    <org.lineageos.twelve.ui.views.ListItem
        android:id="@+id/openArtistListItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headlineText="@string/open_artist"
        app:leadingIconImage="@drawable/ic_person" />

</LinearLayout>
