<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceContainer"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    android:theme="@style/Theme.Material3.DynamicColors.DayNight">

    <FrameLayout
        android:id="@+id/thumbnailMaterialCardView"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="?attr/colorSecondaryContainer">

        <ImageView
            android:id="@+id/thumbnailImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_music_note" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/now_playing_widget_dummy_title"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/now_playing_widget_dummy_artist"
            android:textColor="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/albumTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/now_playing_widget_dummy_album"
            android:textColor="?attr/colorOnSurface" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:progress="25" />

        <ImageButton
            android:id="@+id/playPauseImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_play_arrow"
            android:tint="?attr/colorOnSurface"
            tools:ignore="UseAppTint" />

    </FrameLayout>

</LinearLayout>
